fix: ingress a list
