# pkg/handler/argo_application_describe.go
@@ -17,6 +17,23 @@ import (
 	"github.com/h4-poc/service/pkg/store"
 )
 
+type (
+	ArgoApplicationDetail struct {
+		Name                string              `json:"name"`
+		TenantName          string              `json:"tenant_name"`
+		AppCode             string              `json:"appcode"`
+		Description         string              `json:"description"`
+		CreatedBy           string              `json:"created_by"`
+		Template            TemplateInfo        `json:"template"`
+		DestinationClusters DestinationClusters `json:"destination_clusters"`
+		Ingress             []Ingress           `json:"ingress,omitempty"`
+		Security            *Security           `json:"security,omitempty"`
+		Labels              map[string]string   `json:"labels,omitempty"`
+		Annotations         map[string]string   `json:"annotations,omitempty"`
+		RuntimeStatus       RuntimeStatusInfo   `json:"runtime_status"`
+	}
+)
+
 func DescribeArgoApplication(c *gin.Context) {
 	tenant := c.GetString(middleware.TenantKey)
 	username := c.GetString(middleware.UserNameKey)
@@ -112,11 +129,13 @@ func getApplicationDetail(ctx context.Context, opts *AppListOptions, appName str
 			Clusters:  []string{"in-cluster"},
 			Namespace: conf.DestNamespace,
 		},
-		Ingress: &Ingress{
-			Host: conf.Annotations["h4-poc.github.io/ingress.host"],
-			TLS: &TLS{
-				Enabled:    conf.Annotations["h4-poc.github.io/ingress.tls.enabled"] == "true",
-				SecretName: conf.Annotations["h4-poc.github.io/ingress.tls.secretName"],
+		Ingress: []Ingress{
+			{
+				Host: conf.Annotations["h4-poc.github.io/ingress.host"],
+				TLS: &TLS{
+					Enabled:    conf.Annotations["h4-poc.github.io/ingress.tls.enabled"] == "true",
+					SecretName: conf.Annotations["h4-poc.github.io/ingress.tls.secretName"],
+				},
 			},
 		},
 		Security: &Security{
